@@ -165,7 +165,7 @@ Slur::get_curve (Grob *me)
 {
   Bezier b;
   int i = 0;
-  for (SCM s = me->get_property ("control-points"); s != SCM_EOL;
+  for (SCM s = me->get_property ("control-points"); scm_is_pair (s);
        s = scm_cdr (s))
     b.control_[i++] = ly_scm2offset (scm_car (s));
 
